include/ri_com.h

	RI_API int RiCom_Open(char *name, int baudRate, char parity, int databits, int stopBits);
	RI_API int RiCom_Write(char *buf, int bufLen);
	RI_API int RiCom_Read(char *buf, int bufSize);
	RI_API int RiCom_Close();