include/ri_dbg.h

	RI_API int RiDbg_Enable();
	RI_API int RiDbg_Disable();